# open-myMinecraftServer

./: .env.example  .gitignore  123.ps1  README.md  StartBot.bat  __init__.py  backup - 複製.ps1  bot.py  main.py  pyproject.toml  pytest.ini  readme.md  rename - 複製.ps1  run.bat  run.py  setup.py  test_token.py
assets/: config.example.json  servers.example.json  servers.json
assets/command_help/: alist.json  help.json  list.json  start.json
assets/wiki/: 首頁.md
assets/wiki/01_指令/基礎/: help.md  list.md  start.md
assets/wiki/01_指令/進階/: alist.md
assets/wiki/03_玩家/: 入門指南.md
config/: server.json
scripts/: run.py
src/: __init__.py  bot.py  main.py  utils.py
src/cli/: __init__.py  terminal_handler.py
src/cogs/: __init__.py  minecraft.py
src/command/: list.py  server.py
src/commands/: __init__.py  addserver.py  alist.py  help.py  list.py  mod.py  ping.py  start.py
src/interface/cli/: __init__.py  handler.py  terminal.py
src/interface/cli/commands/: __init__.py  server.py
src/interface/discord/: __init__.py  bot.py
src/interface/discord/commands/: __init__.py  server.py
src/service/: __init__.py  server_backend.py  server_service.py
src/service/config/: server_process_config.py
src/services/: server.py
src/utils/: module_loader.py
tests/: conftest.py  test_alist.py  test_commands.py  test_config.py  test_files.py  test_help.py  test_token.py
tests/mocks/: alist_mock.py
