[tool.poetry]
name = "open-myminecraftserver"
version = "0.1.0"
description = "Minecraft server management Discord bot"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "*"
python-dotenv = "*"
psutil = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
