[project]
name = "open-myminecraftserver"
version = "0.1.0"
description = ""
authors = [
    {name = "Skywind5487",email = "skywind5487@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "discord-py (>=2.5.0,<3.0.0)",
    "discord (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
