[tool.poetry]
name = "open-myminecraftserver"
version = "0.1.0"
description = "Minecraft 伺服器管理系統"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "main.py" }
]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
python-dotenv = "^1.0.0"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"

[tool.poetry.scripts]
start = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
